--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 footer-copyright">
+                    <a id="designer" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%61%65%74%65%72%6E%61%6D%62%61%6E%64%40%67%6D%61%69%6C%2E%63%6F%6D">Contact us</a>
+                </div>
+                <div class="col-sm-12 footer-copyright">
                     © <script>document.write(new Date().getFullYear())</script> Aeternam - All rights reserved
                 </div>
             </div>
