--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <!-- music -->
     <div class="section" id="music">
         <div class="container">
-            <div class="col-md-6 aos-init aos-animate" data-aos="fade-up">
-                <div class="row" style='padding-bottom: 3vw'>
-                    <img id='albumlogo' src="img/Arabic.png" />
-                    <h1 class="outnow size-50" style='padding-bottom:1vw'>New album coming soon</h1>
-                    <div class="social">
-                        <ul class="mu-social-media">
+            <div class="col-md-6" data-aos="fade-up" style='padding-bottom: 8vw'>
+                <img id='albumlogo' src="img/Arabic.png" />
+                <h1 class="outnow size-50" style='padding-bottom:1vw'>NEW ALBUM OUT NOW</h1>
+                <div style="text-align: center">
+                    <div class="listen">
+                        <ul class="mu-listen">
                             <li> <a href="https://www.facebook.com/aeternammetal" target='_blank'><i
                                         class="fab fa-facebook"></i></a>
                             </li>
@@ -52,7 +52,7 @@
                             <li> <a href="https://www.youtube.com/aeternametal" target='_blank'><i
                                         class="fab fa-youtube"></i></a>
                             </li>
-                            <li> <a href="https://www.youtube.com/aeternametal" target='_blank'><i
+                            <li> <a href="https://aeternam.bandcamp.com" target='_blank'><i
                                         class="fab fa-bandcamp"></i></a>
                             </li>
                         </ul>
@@ -78,7 +78,7 @@
                     <iframe class="mySlides" src="https://www.youtube.com/embed/qnzo64XdlKM" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
-                    <iframe class="mySlides" src="https://www.aeternam.bandcamp.com" frameborder="0"
+                    <iframe class="mySlides" src="https://www.youtube.com/embed/QNcW41vt6dA" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                     <div class="w3-center w3-display-bottommiddle" style="width:100%">
@@ -96,10 +96,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 footer-copyright">
-                    <a id="designer" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%61%65%74%65%72%6E%61%6D%62%61%6E%64%40%67%6D%61%69%6C%2E%63%6F%6D">Contact us</a>
+                    <a id="designer"
+                        href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%61%65%74%65%72%6E%61%6D%62%61%6E%64%40%67%6D%61%69%6C%2E%63%6F%6D">Contact
+                        us</a>
                 </div>
                 <div class="col-sm-12 footer-copyright">
-                    © <script>document.write(new Date().getFullYear())</script> Aeternam - All rights reserved
+                    ©
+                    <script>document.write(new Date().getFullYear())</script> Aeternam - All rights reserved
                 </div>
             </div>
         </div>
