--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="col-md-6" data-aos="fade-up" style='padding-bottom: 8vw'>
                 <img id='albumlogo' src="img/Arabic.png" />
-                <h1 class="outnow size-50" style='padding-bottom:1vw'>NEW ALBUM OUT NOW</h1>
+                <h1 class="outnow size-50" style='padding-bottom:1vw'>New album coming soon</h1>
                 <div style="text-align: center">
                     <div class="listen">
                         <ul class="mu-listen">
